--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.0.2",
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.6.1"
   },
